<resources>
    <string name="app_name">Home Node Control</string>
    <string name="input_mdp">password ...</string>
    <string name="allports">ALL</string>
    <string name="port1">Port 1</string>
    <string name="port2">Port 2</string>
    <string name="port3">Port 3</string>
    <string name="port4">Port 4</string>
    <string name="inputIpConfig">x.x.x.x (IP server)</string>
    <string name="textIpConfig">Saisissez l\'adresse IP de votre server</string>
    <string name="validate">Validé</string>
    <string name="ip_not_valid">IP address not valid&#8230;</string>
    <string name="cameraFragment">Camera Live</string>
    <string name="buttonStorage">Storage</string>
    <string name="textStorage">Voir les enregistrements</string>
    <string name="lastIntrusion">Derniere Intrusion</string>
    <string name="beforeLastIntrusion">Avant derniere intrusion</string>






</resources>
